officialのredmineとnginxとpostgresqlで構成

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,35 @@
 version: '2'
 services:
+  nginx:
+    image: nginx
+    restart: always
+    environment:
+      TZ: ${TZ}
+    build: ./nginx
+    volumes:
+      - ./volumes/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    hostname: nginx
+    ports:
+      - "80:80"
+
+  redmine:
+    build: ./redmine
+    restart: always
+    environment:
+      TZ: ${TZ}
+      REDMINE_DB_POSTGRES: db
+      REDMINE_DB_USERNAME: redmine
+      REDMINE_DB_PASSWORD: dbumauma
+      REDMINE_DB_ENCODING: utf8
+      REDMINE_DB_PORT: 5432
+
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: dbumauma
+
+
   postgresql:
     image: sameersbn/postgresql:9.6-4
     environment:
@@ -9,11 +39,11 @@ services:
     volumes:
     - ./volumes/postgresql:/var/lib/postgresql
 
-  redmine:
-    build:
+      image    build:
       context: .
       dockerfile: ./redmine/Dockerfile
     # image: sameersbn/redmine:4.0.3-2
+
     depends_on:
     - postgresql
     environment:
