--- a/redmine/Dockerfile
+++ b/redmine/Dockerfile
@@ -1,2 +1,2 @@
-FROM sameersbn/redmine:4.0.3-2
-ADD redmine/formatter.rb /home/redmine/redmine/lib/redmine/wiki_formatting/markdown
+FROM redmine
+ADD redmine/formatter.rb /srv/redmine/lib/redmine/wiki_formatting/markdown
