redmine DockerFile 修正

--- a/redmine/Dockerfile
+++ b/redmine/Dockerfile
@@ -1,2 +1,2 @@
 FROM redmine
-ADD redmine/formatter.rb /srv/redmine/lib/redmine/wiki_formatting/markdown
+ADD ./formatter.rb /srv/redmine/lib/redmine/wiki_formatting/markdown
