--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     - postgresql
     environment:
       TZ: ${TZ}
-      REDMINE_DB_POSTGRES: db
+      REDMINE_DB_POSTGRES: redmine
       REDMINE_DB_USERNAME: redmine
       REDMINE_DB_PASSWORD: dbumauma
       REDMINE_DB_ENCODING: utf8
@@ -32,7 +32,7 @@ services:
     restart: always
     environment:
       TZ: ${TZ}
-      POSTGRES_DB: redmine_production
+      POSTGRES_DB: redmine
       POSTGRES_USER: redmine
       POSTGRES_PASSWORD: dbumauma
     volumes:
