dbポート修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,16 +20,17 @@ services:
     - postgresql
     environment:
       TZ: ${TZ}
-      REDMINE_DB_POSTGRES: redmine
+      REDMINE_DB_POSTGRES: postgres
       REDMINE_DB_USERNAME: redmine
       REDMINE_DB_PASSWORD: dbumauma
       REDMINE_DB_ENCODING: utf8
-      REDMINE_DB_PORT: 5432
 
   postgresql:
     container_name: db
     image: postgres
     restart: always
+    ports:
+      - 5432:5432
     environment:
       TZ: ${TZ}
       POSTGRES_DB: redmine
