--- a/volumes/nginx/default.conf
+++ b/volumes/nginx/default.conf
@@ -3,6 +3,6 @@ server {
     server_name  localhost;
 
     location /redmine/ {
-        proxy_pass http://redmine:3000;
+        proxy_pass http://redmine:3000/;
     }
 }
