--- a/volumes/nginx/default.conf
+++ b/volumes/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen       80;
     server_name  localhost;
 
-    location /redmine/ {
+    location / {
         proxy_pass http://redmine:3000/;
     }
 }
