--- a/volumes/nginx/default.conf
+++ b/volumes/nginx/default.conf
@@ -5,4 +5,9 @@ server {
     location / {
         proxy_pass http://redmine:3000/;
     }
+
+    location ~ .*\.(html?|jpe?g|gif|pdf|png|css|js|ico|swf|inc) {
+        expires 1d;
+        access_log off
+    }
 }
