--- a/volumes/nginx/default.conf
+++ b/volumes/nginx/default.conf
@@ -8,6 +8,6 @@ server {
 
     location ~ .*\.(html?|jpe?g|gif|pdf|png|css|js|ico|swf|inc) {
         expires 1d;
-        access_log off
+        access_log off;
     }
 }
